fix swagger doc tournament list
