# server/docs/swagger.yaml
@@ -508,25 +508,6 @@ paths:
       summary: Start a matchmaking search for a new game
       tags:
       - play
-  /play/tournament/list:
-    get:
-      consumes:
-      - application/json
-      description: List all tournaments you can access
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/types.TournamentInfo'
-            type: array
-        "500":
-          description: internal server error
-      summary: List all tournaments
-      tags:
-      - tournament
   /register:
     post:
       consumes:
@@ -659,6 +640,25 @@ paths:
         "500":
           description: internal server error
       summary: Create a new tournament
+      tags:
+      - tournament
+  /tournament/list:
+    get:
+      consumes:
+      - application/json
+      description: List all tournaments you can access
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.TournamentInfo'
+            type: array
+        "500":
+          description: internal server error
+      summary: List all tournaments
       tags:
       - tournament
 swagger: "2.0"
